syntax = "proto3";

option csharp_namespace = "WebApi.Grpc";

package customer;

service CustomerGrpcService {
	rpc GetCustomerById (GetCustomerByIdRequest) returns (GetCustomerByIdResponse);
}

message GetCustomerByIdRequest {
	string id = 1;
}

message GetCustomerByIdResponse {
	string id = 1;
	string customer_name = 2;
	string email = 3;
	string phone_number = 4;
}
